--- a/templates/result.html
+++ b/templates/result.html
@@ -10,10 +10,13 @@
       <form>
          <img src="../static/uploads/res.png">
          <p style="border: 2px; border-style: solid; border-color: #555555; padding: 1em; width:300px;">Легенда:
-            <br><button style="background-color: #0000FF; height: 20px; width: 20px;" disabled></button> - Нефтепродукты
-            <br><button style="background-color: #FF0000; height: 20px; width: 20px;" disabled></button> - Углубление
-            <br><button style="background-color: #00FF00; height: 20px; width: 20px;" disabled></button> - Протяжённое углубление
-            <br><button style="background-color: #FF00FF; height: 20px; width: 20px;" disabled></button> - Ржавчина
+            <br><button style="background-color: #000000; height: 20px; width: 20px;" disabled></button> - Чистый металл
+            <br><button style="background-color: #282828; height: 20px; width: 20px;" disabled></button> - Засоленность
+            <br><button style="background-color: #505050; height: 20px; width: 20px;" disabled></button> - Коррозия по телу
+            <br><button style="background-color: #787878; height: 20px; width: 20px;" disabled></button> - Питтинг
+            <br><button style="background-color: #A0A0A0; height: 20px; width: 20px;" disabled></button> - Слой нефтепродуктов
+            <br><button style="background-color: #C8C8C8; height: 20px; width: 20px;" disabled></button> - Углубление
+            <br><button style="background-color: #F0F0F0; height: 20px; width: 20px;" disabled></button> - Углубление протяженное
          </p>
          <hr>
          <p>Если Вы считаете, что нейросеть не справилась с задачей, вы можете <a href=feedback>отправить нам фидбек (в разработке)</a>.</p>
