--- a/templates/blog/feedback.html
+++ b/templates/blog/feedback.html
@@ -7,8 +7,6 @@
 
 {% block content %}
 <body onload="pencil()">
-    <h1>В разработке. Состав и качество работы функционала может не совпадать с ожиданиями, надеждами и ильями ☺.</h1>
-    <hr>
     <form id=drawtype method="post">
         <label for="title">Title</label>
         <br>
@@ -21,7 +19,7 @@
         <label>Ширина кисти</label></td>
         <button id="pixel_minus" type="button" onclick="reduce_pixel()" style="width: 25px;">-</button>
         <button id="pixel_plus" type="button" onclick="add_pixel()" style="width: 25px;">+</button>
-        <br>
+        <hr>
         <!-- <img src="{{ url_for('blog.layer', id=post['id'], layer='layer_salinity') }}"> -->
         <input type="hidden" name="canvasimg" id="canvasimg">
         <input type="radio" id="salinity" name="fdbcktype" value="salinity" onclick="color('#0000FF')" checked><label for="salinity">Засоленность</label>
@@ -34,7 +32,7 @@
         <input type="radio" id="on" name="eraser12" value="on"><label for="on" onclick="eraser(true)">Ластик вкл</label>
         <input type="radio" id="off" name="eraser12" value="off" checked><label for="off" onclick="eraser(false)">Ластик выкл</label>
         <hr>
-        <button id="restoreLayer" type="button" onclick="restoreLayer()">Restore layer</button>
+        <!-- <button id="restoreLayer" type="button" onclick="restoreLayer()">Restore layer</button>-->
         <input type="Submit" name="Save layer" value="Save defect layer" onclick="save()">
         <hr>
         <canvas id="paint" style="border: 2px solid #000000; background: url('/static/temp/background.png');"></canvas>
